Finish localisation work